--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gulp build",
     "start": "node server.js",
-    "heroku-postbuild": "npm install && npm run build && npm start"
+    "heroku-postbuild": "npm install && npm run build && npm start && http-server build/"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "http-server": "^0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
