--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gulp build",
     "start": "node server.js",
-    "heroku-postbuild": "npm run build && http-server build/"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
